# mysite-django-wagtail

./: README.md  pyproject.toml
blog/migrations/: 0001_initial.py
home/: models.py
home/migrations/: 0003_homepage_body.py
mysite/settings/: base.py  dev.py
